[package]
name = "blockchain-info-app"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
tokio = {version = "1.44", features=["full"]}
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"